--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <p>Click on a file to download:</p>
         <ul>
-            <li><a href="mods/mod1.zip">Mod 1</a></li>
+            <li><a href="https://aboodi-8.github.io/PS3/dbformat.txt" download>Mod 1</a></li>
             <li><a href="mods/mod2.zip">Mod 2</a></li>
             <li><a href="mods/mod3.zip">Mod 3</a></li>
         </ul>
