--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Click on a file to download:</p>
         <ul>
             <li><a href="https://aboodi-8.github.io/PS3/dbformat.txt" download>Mod 1</a></li>
-            <li><a href="mods/mod2.zip">Mod 2</a></li>
+            <li><a href="https://raw.githubusercontent.com/aboodi-8/PS3/main/dbformat.txt" download="dbformat.txt">dbformat.txt</a></li>
             <li><a href="mods/mod3.zip">Mod 3</a></li>
         </ul>
     </div>
