--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PS3 Mods Download</title>
+    <title>موقع عبده للتهكير</title>
     <meta charset="UTF-8">
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; background-color: #222; color: #fff; }
-        h1 { margin-top: 20px; }
-        .container { width: 90%; max-width: 600px; margin: auto; padding: 20px; }
+        body { font-family: Arial, sans-serif; text-align: center; background-color: #1a1a1a; color: #fff; margin: 0; padding: 0; }
+        h1 { margin-top: 20px; font-size: 28px; color: #00ffcc; text-shadow: 2px 2px 5px rgba(0, 255, 204, 0.5); }
+        .container { width: 90%; max-width: 600px; margin: auto; padding: 20px; background: #222; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); }
         ul { list-style: none; padding: 0; }
-        li { margin: 10px 0; padding: 10px; background: #333; border-radius: 5px; }
-        a { color: #00ffcc; text-decoration: none; }
+        li { margin: 10px 0; padding: 12px; background: #333; border-radius: 8px; transition: background 0.3s, transform 0.2s; }
+        li:hover { background: #444; transform: scale(1.05); }
+        a { color: #00ffcc; text-decoration: none; font-weight: bold; display: block; transition: color 0.3s; }
+        a:hover { text-decoration: underline; color: #ffcc00; }
     </style>
 </head>
 <body>
-    <h1>PS3 Hacks Download</h1>
+    <h1>موقع عبده للتهكير</h1>
     <div class="container">
-        <p>Click on a file to download:</p>
+        <p>ابدأ بتحميل الملفات بالتسلسل:</p>
         <ul>
-            <li><a href="https://aboodi-8.github.io/PS3/Files.zip" download>Files</a></li>
-            <li><a href="https://raw.githubusercontent.com/aboodi-8/PS3/main/dbformat.txt" download="dbformat.txt">dbformat.txt</a></li>
-            <li><a href="mods/mod3.zip">Mod 3</a></li>
+            <li><a href="https://store.brewology.com/get/homebrew.php?id=320&fid=2349">تحميل المتجر</a></li>
+            <li><a href="https://aboodi-8.github.io/PS3/Files.zip" download>تحميل الملفات المهمة للمتجر</a></li>
+            <li><a href="https://store.brewology.com/get/homebrew.php?id=24&fid=2171">تحميل برنامج MultiMAN</a></li>
         </ul>
     </div>
 </body>
