--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="css" type="text/css" href="css.css" />
     <title>موقع عبده للتهكير</title>
     <meta charset="UTF-8">
     <style>
