--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html dir="rtl">
 <head>
-    <link rel="css" type="text/css" href="css.css" />
     <title>موقع عبده للتهكير</title>
     <meta charset="UTF-8">
     <style>
