--- a/index.html
+++ b/index.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
-<html dir="rtl">
+<html>
 <head>
     <title>موقع عبده للتهكير</title>
     <meta charset="UTF-8">
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; background-color: #1a1a1a; color: #fff; margin: 0; padding: 0; }
-        h1 { margin-top: 20px; font-size: 28px; color: #00ffcc; text-shadow: 2px 2px 5px rgba(0, 255, 204, 0.5); }
-        .container { width: 90%; max-width: 600px; margin: auto; padding: 20px; background: #222; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); }
-        ul { list-style: none; padding: 0; }
-        li { margin: 10px 0; padding: 12px; background: #333; border-radius: 8px; transition: background 0.3s, transform 0.2s; }
-        li:hover { background: #444; transform: scale(1.05); }
-        a { color: #00ffcc; text-decoration: none; font-weight: bold; display: block; transition: color 0.3s; }
-        a:hover { text-decoration: underline; color: #ffcc00; }
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            background-color: #1a1a1a; 
+            color: #fff; 
+            margin: 0; 
+            padding: 0;
+            direction: rtl; /* Force RTL direction globally */
+        }
+        h1 { 
+            margin-top: 20px; 
+            font-size: 28px; 
+            color: #00ffcc; 
+            text-shadow: 2px 2px 5px rgba(0, 255, 204, 0.5);
+            text-align: center; /* Make sure heading is centered */
+        }
+        .container { 
+            width: 90%; 
+            max-width: 600px; 
+            margin: auto; 
+            padding: 20px; 
+            background: #222; 
+            border-radius: 10px; 
+            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5);
+            text-align: right; /* Align content inside container to the right */
+        }
+        ul { 
+            list-style: none; 
+            padding: 0; 
+            text-align: right; /* Align the list to the right */
+        }
+        li { 
+            margin: 10px 0; 
+            padding: 12px; 
+            background: #333; 
+            border-radius: 8px; 
+            transition: background 0.3s, transform 0.2s; 
+        }
+        li:hover { 
+            background: #444; 
+            transform: scale(1.05); 
+        }
+        a { 
+            color: #00ffcc; 
+            text-decoration: none; 
+            font-weight: bold; 
+            display: block; 
+            transition: color 0.3s; 
+        }
+        a:hover { 
+            text-decoration: underline; 
+            color: #ffcc00; 
+        }
     </style>
 </head>
 <body>
