--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html dir="rtl">
 <head>
     <title>موقع عبده للتهكير</title>
     <meta charset="UTF-8">
+    <!-- Link to Google Fonts for better Arabic rendering -->
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
     <style>
         body { 
-            font-family: Arial, sans-serif; 
+            font-family: 'Amiri', Arial, sans-serif; 
             text-align: center; 
             background-color: #1a1a1a; 
             color: #fff; 
             margin: 0; 
-            padding: 0;
-            direction: rtl; /* Force RTL direction globally */
+            padding: 0; 
         }
         h1 { 
             margin-top: 20px; 
             font-size: 28px; 
             color: #00ffcc; 
-            text-shadow: 2px 2px 5px rgba(0, 255, 204, 0.5);
-            text-align: center; /* Make sure heading is centered */
+            text-shadow: 2px 2px 5px rgba(0, 255, 204, 0.5); 
         }
         .container { 
             width: 90%; 
@@ -27,13 +27,11 @@
             padding: 20px; 
             background: #222; 
             border-radius: 10px; 
-            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5);
-            text-align: right; /* Align content inside container to the right */
+            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); 
         }
         ul { 
             list-style: none; 
             padding: 0; 
-            text-align: right; /* Align the list to the right */
         }
         li { 
             margin: 10px 0; 
