--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body { 
             font-family: 'Amiri', Arial, sans-serif; 
-            text-align: center; 
+            text-align: right; /* Ensure text aligns to the right */
             background-color: #1a1a1a; 
             color: #fff; 
             margin: 0; 
@@ -32,6 +32,7 @@
         ul { 
             list-style: none; 
             padding: 0; 
+            text-align: right; /* Ensure list items align properly for RTL text */
         }
         li { 
             margin: 10px 0; 
