--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
     <div class="container">
         <p>Start by downloading the files in sequence:</p>
         <ul>
-            <li><a href="https://store.brewology.com/get/homebrew.php?id=320&fid=2349">Download the Store</a></li>
-            <li><a href="https://aboodi-8.github.io/PS3/Files.zip" download>Download the important files for the store</a></li>
-            <li><a href="https://store.brewology.com/get/homebrew.php?id=24&fid=2171">Download the MultiMAN program</a></li>
+            <li><a href="https://store.brewology.com/get/homebrew.php?id=320&fid=2349">PKGI Store Downloade</a></li>
+            <li><a href="https://aboodi-8.github.io/PS3/Files.zip" download>Important files for the PKGI Store Downloade</a></li>
+            <li><a href="https://store.brewology.com/get/homebrew.php?id=24&fid=2171">MultiMAN Downloade</a></li>
+        </ul>
+     <p></p>
+     <p>Useful but not needed:</p>
+        <ul>
+            <li><a href="https://www.mediafire.com/file/s1jc256rnhsauol/ZukoStore_v4.5_HEN.pkg/file">Zuko Store Downloade</a></li>
         </ul>
     </div>
 </body>
