--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
             </ul>
         </div>
     </div>
+<p style="font-size: 13px; opacity: 0.5; position: fixed; bottom: 0; left: 0; width: 100%; color: white; text-align: center;">I do not own or claim to own any of the content mentioned. All rights belong to their respective owners. This is for informational/educational purposes only. I do not endorse, support, or encourage piracy in any form. If you choose to proceed, you do so at your own risk.</p>
 </body>
 </html>
