--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- GET OUT!!!!!!!! -->
 <html>
 <head>
-    <title>PS3 HEN tools</title>
+    <title>PS3 HEN Tools</title>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <style>
@@ -84,7 +84,7 @@
     </style>
 </head>
 <body>
-    <h1>Abdo's Hacking Website</h1>
+    <h1>Aboodi's Tools</h1>
 
     <div class="container-wrapper">
         <!-- First container -->
