--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             background-color: #1a1a1a; 
             color: #fff; 
             margin: 0; 
-            padding: 0; 
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         h1 { 
@@ -28,7 +31,7 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 15px;
-            padding: 20px; 
+            padding: 20px;
         }
         
         .container { 
