--- a/index.html
+++ b/index.html
@@ -119,6 +119,43 @@
             </ul>
         </div>
     </div>
+
+
+    <div class="container-wrapper">
+        <!-- First container -->
+        <div class="container">
+            <p>Start by downloading the files in sequence:</p>
+            <ul>
+                <li><a href="https://store.brewology.com/get/homebrew.php?id=320&fid=2349">PKGI Store Download</a></li>
+                <li><a href="https://aboodi-8.github.io/PS3/Files.zip" download>Important files for the PKGI Store</a></li>
+                <li><a href="https://store.brewology.com/get/homebrew.php?id=24&fid=2171">MultiMAN Download</a></li>
+            </ul>
+        </div>
+
+        <!-- Second container -->
+        <div class="container">
+            <p>Useful but not required:</p>
+            <ul>
+                <li><a href="https://www.mediafire.com/file/s1jc256rnhsauol/ZukoStore_v4.5_HEN.pkg/file">Zuko Store Download</a></li>
+                <li><a href="https://ps3.brewology.com/downloads/">Brewology Webseite</a></li>
+                <li><a href="https://ps3xploit.me/">Ps3xploit Webseite</a></li>
+            </ul>
+        </div>
+
+        <!-- Third container -->
+        <div class="container">
+            <p>Additional Tools:</p>
+            <ul>
+                <li><a href="https://ps3xploit.me/hen/installer/index.html">HEN Installer/Enabler</a></li>
+                <li><a href="https://ps3addict.github.io/alternate/">HEN Installer (Alternate)</a></li>
+            </ul>
+        </div>
+    </div>
+
+
+
+
+
 <p style="
           font-size: 13px;
           opacity: 0.5;
