--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
     <div class="container-wrapper">
         <!-- First container -->
         <div class="container">
-            <p>Start by downloading the files in sequence:</p>
+            <p>PKGI:</p>
             <ul>
+                <li><a href="https://store.brewology.com/get/homebrew.php?id=24&fid=2171">YouTube Tutorial</a></li>
+                <hr style="opacity: 0.5;">
                 <li><a href="https://store.brewology.com/get/homebrew.php?id=320&fid=2349">PKGI Store Download</a></li>
                 <li><a href="https://aboodi-8.github.io/PS3/Files.zip" download>Important files for the PKGI Store</a></li>
                 <li><a href="https://store.brewology.com/get/homebrew.php?id=24&fid=2171">MultiMAN Download</a></li>
@@ -98,24 +100,28 @@
 
         <!-- Second container -->
         <div class="container">
-            <p>Useful but not required:</p>
+            <p>Additional Tools and Apps:</p>
             <ul>
                 <li><a href="https://www.mediafire.com/file/s1jc256rnhsauol/ZukoStore_v4.5_HEN.pkg/file">Zuko Store Download</a></li>
-                <li><a href="https://ps3.brewology.com/downloads/">Brewology Website</a></li>
-                <li><a href="https://ps3xploit.me/">Ps3xploit Website</a></li>
+                <li><a href="https://aboodi-8.github.io/PS3/ZukoStoreFix.pkg">Zuko Store Fix Download</a></li>
+                <li><a href="https://www.mediafire.com/file/wj95jaq3sc17bjt/DARKING_STORE_HEN%26CFW_V4.1%2B%5B4.91_Fix%5D.zip/file">Darking Store Download</a></li>   
+                <li><a href="https://aboodi-8.github.io/PS3/FIX%204.91%20V2%20OFICIAL%20by%20Videogames%20SCZ.pkg">Darking Store Fix Download</a></li>
+              <hr style="opacity: 0.0;">
             </ul>
         </div>
 
         <!-- Third container -->
         <div class="container">
-            <p>Additional Tools:</p>
+            <p>Useful Websites:</p>
             <ul>
+                <li><a href="https://ps3xploit.me/">Ps3xploit Website</a></li>
+                <li><a href="https://ps3.brewology.com/downloads/">Brewology Website</a></li>
                 <li><a href="https://ps3xploit.me/hen/installer/index.html">HEN Installer/Enabler</a></li>
                 <li><a href="https://ps3addict.github.io/alternate/">HEN Installer (Alternate)</a></li>
+                <hr style="opacity: 0.0;">
             </ul>
         </div>
     </div>
-
     <p style="
           font-size: 13px;
           opacity: 0.5;
