--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         <div class="container">
             <p>Useful Websites:</p>
             <ul>
-                <li><a href="https://ps3xploit.me/">Ps3xploit Website</a></li>
+                <li><a href="http://ps3xploit.me/">Ps3xploit Website</a></li>
                 <li><a href="https://ps3.brewology.com/downloads/">Brewology Website</a></li>
-                <li><a href="https://ps3xploit.me/hen/installer/index.html">HEN Installer/Enabler</a></li>
+                <li><a href="http://ps3xploit.me/hen/installer/index.html">HEN Installer/Enabler</a></li>
                 <li><a href="https://ps3addict.github.io/alternate/">HEN Installer (Alternate)</a></li>
                 <hr style="opacity: 0.0;">
             </ul>
