--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         <div class="container">
             <p>Additional Tools and Apps:</p>
             <ul>
-                <li><a href="https://www.mediafire.com/file/s1jc256rnhsauol/ZukoStore_v4.5_HEN.pkg/file">Zuko Store Download</a></li>
+                <li><a href="https://www.mediafire.com/file/s1jc256rnhsauol/ZukoStore_v4.5_HEN.pkg/file" target="_blank" rel="noopener noreferrer">Zuko Store Download</a></li>
                 <li><a href="https://aboodi-8.github.io/PS3/ZukoStoreFix.pkg">Zuko Store Fix Download</a></li>
-                <li><a href="https://www.mediafire.com/file/wj95jaq3sc17bjt/DARKING_STORE_HEN%26CFW_V4.1%2B%5B4.91_Fix%5D.zip/file">Darking Store Download</a></li>   
+                <li><a href="https://www.mediafire.com/file/wj95jaq3sc17bjt/DARKING_STORE_HEN%26CFW_V4.1%2B%5B4.91_Fix%5D.zip/file" target="_blank" rel="noopener noreferrer">Darking Store Download</a></li>   
                 <li><a href="https://aboodi-8.github.io/PS3/FIX%204.91%20V2%20OFICIAL%20by%20Videogames%20SCZ.pkg">Darking Store Fix Download</a></li>
               <hr style="opacity: 0.0;">
             </ul>
@@ -114,10 +114,10 @@
         <div class="container">
             <p>Useful Websites:</p>
             <ul>
-                <li><a href="http://ps3xploit.me/">Ps3xploit Website</a></li>
-                <li><a href="https://ps3.brewology.com/downloads/">Brewology Website</a></li>
-                <li><a href="http://ps3xploit.me/hen/installer/index.html">HEN Installer/Enabler</a></li>
-                <li><a href="https://ps3addict.github.io/alternate/">HEN Installer (Alternate)</a></li>
+                <li><a href="http://ps3xploit.me/" target="_blank" rel="noopener noreferrer">Ps3xploit Website</a></li>
+                <li><a href="https://ps3.brewology.com/downloads/" target="_blank" rel="noopener noreferrer">Brewology Website</a></li>
+                <li><a href="http://ps3xploit.me/hen/installer/index.html" target="_blank" rel="noopener noreferrer">HEN Installer/Enabler</a></li>
+                <li><a href="https://ps3addict.github.io/alternate/" target="_blank" rel="noopener noreferrer">HEN Installer (Alternate)</a></li>
                 <hr style="opacity: 0.0;">
             </ul>
         </div>
